@@ -115,6 +115,8 @@ static int __init init_lustre_lite(void)
         ll_register_cache(&ll_cache_definition);
 
         lustre_register_client_fill_super(ll_fill_super);
+        lustre_register_kill_super_cb(ll_kill_super);
+
         lustre_register_client_process_config(ll_process_config);
 
         ll_get_random_bytes(seed, sizeof(seed));
@@ -141,6 +143,8 @@ static void __exit exit_lustre_lite(void)
         int rc;
 
         lustre_register_client_fill_super(NULL);
+        lustre_register_kill_super_cb(NULL);
+
         lustre_register_client_process_config(NULL);
 
         ll_unregister_cache(&ll_cache_definition);
